Address Sonar and IntelliJ warnings in SynchronizedBlockReentrantLockPerformance